Drop CodeMirror v3 demo, only include current v4. Switch to new official codemirror repo.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,7 @@
 [submodule "CodeMirror"]
 	path = CodeMirror
-	url = https://github.com/marijnh/CodeMirror
-	branch = v3
-[submodule "CodeMirror-v4"]
-	path = CodeMirror-v4
-	url = https://github.com/marijnh/CodeMirror
+	url = https://github.com/codemirror/CodeMirror
 	branch = master
+[submodule "KaTeX"]
+	path = KaTeX
+	url = https://github.com/Khan/KaTeX
