Demo: version dropdown for mathjax (e.g. `?mathjax=2.4.0`).
TODO: add dropdown for codemirror, fetch version list from CDNJS.

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "KaTeX"]
 	path = KaTeX
 	url = https://github.com/Khan/KaTeX
+[submodule "version.js"]
+	path = version.js
+	url = https://github.com/jstayton/version.js
