--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "version.js"]
 	path = version.js
-	url = https://github.com/jstayton/version.js
+	url = https://github.com/cben/version.js
